# rdtsc-rs

./: .gitignore  Cargo.toml  build.rs  rdtsc.inf  readme.md
src/: bindings.rs  driver_version.rs  hoot_int.rs  lib.rs  rdtsc_emu.rs
src/distorm/: config.rs  decoder.rs  instructions.rs  insts.rs  mnemonics.rs  mod.rs  prefix.rs  text_defs.rs  wstring.rs  x86defs.rs
